--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,7 @@ endif()
 macro(ADDTEST name)
     add_executable(test_${name} test_${name}.f90)
     target_link_libraries(test_${name} "${PROJECT_NAME}" "test-drive::test-drive")
+    target_link_libraries(test_${name} ${PROJECT_NAME} ${MINIZIP_LIBRARY})
     add_test(NAME ${name}
              COMMAND $<TARGET_FILE:test_${name}> ${CMAKE_CURRENT_BINARY_DIR}
              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
