--- a/test/io/CMakeLists.txt
+++ b/test/io/CMakeLists.txt
@@ -14,6 +14,7 @@ set_tests_properties(loadtxt_qp PROPERTIES LABELS quadruple_precision)
 set_tests_properties(savetxt_qp PROPERTIES LABELS quadruple_precision)
 
 ADDTEST(getline)
-ADDTEST(npy)
+ADDTEST(np)
+ADDTEST(zip)
 ADDTEST(open)
 ADDTEST(parse_mode)
