--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,24 +20,7 @@ set(fppFiles
     stdlib_io_npy_save.fypp
     stdlib_kinds.fypp
     stdlib_linalg.fypp
-    stdlib_linalg_constants.fypp
-    stdlib_linalg_blas.fypp
-    stdlib_linalg_blas_aux.fypp
-    stdlib_linalg_blas_s.fypp
-    stdlib_linalg_blas_d.fypp
-    stdlib_linalg_blas_q.fypp
-    stdlib_linalg_blas_c.fypp
-    stdlib_linalg_blas_z.fypp
-    stdlib_linalg_blas_w.fypp
     stdlib_linalg_diag.fypp
-    stdlib_linalg_lapack.fypp
-    stdlib_linalg_lapack_aux.fypp
-    stdlib_linalg_lapack_s.fypp
-    stdlib_linalg_lapack_d.fypp
-    stdlib_linalg_lapack_q.fypp
-    stdlib_linalg_lapack_c.fypp
-    stdlib_linalg_lapack_z.fypp
-    stdlib_linalg_lapack_w.fypp
     stdlib_linalg_outer_product.fypp
     stdlib_linalg_kronecker.fypp
     stdlib_linalg_cross_product.fypp
@@ -81,8 +64,29 @@ set(fppFiles
     stdlib_version.fypp
 )
 
+# Preprocessed files to contain preprocessor directives -> .F90 
+set(cppFiles
+    stdlib_linalg_constants.fypp
+    stdlib_linalg_blas.fypp
+    stdlib_linalg_blas_aux.fypp
+    stdlib_linalg_blas_s.fypp
+    stdlib_linalg_blas_d.fypp
+    stdlib_linalg_blas_q.fypp
+    stdlib_linalg_blas_c.fypp
+    stdlib_linalg_blas_z.fypp
+    stdlib_linalg_blas_w.fypp
+    stdlib_linalg_lapack.fypp
+    stdlib_linalg_lapack_aux.fypp
+    stdlib_linalg_lapack_s.fypp
+    stdlib_linalg_lapack_d.fypp
+    stdlib_linalg_lapack_q.fypp
+    stdlib_linalg_lapack_c.fypp
+    stdlib_linalg_lapack_z.fypp
+    stdlib_linalg_lapack_w.fypp
+)
 
 fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
+fypp_f90pp("${fyppFlags}" "${cppFiles}" outPreprocFiles)
 
 set(SRC
     stdlib_ansi.f90
@@ -102,6 +106,7 @@ set(SRC
     stdlib_quadrature_gauss.f90
     stdlib_stringlist_type.f90
     ${outFiles}
+    ${outPreprocFiles}
 )
 
 add_library(${PROJECT_NAME} ${SRC})
