--- a/example/linalg/CMakeLists.txt
+++ b/example/linalg/CMakeLists.txt
@@ -14,3 +14,7 @@ ADD_EXAMPLE(is_symmetric)
 ADD_EXAMPLE(is_triangular)
 ADD_EXAMPLE(outer_product)
 ADD_EXAMPLE(trace)
+ADD_EXAMPLE(state1)
+ADD_EXAMPLE(state2)
+ADD_EXAMPLE(blas_gemv)
+ADD_EXAMPLE(lapack_getrf)
