--- a/test/linalg/CMakeLists.txt
+++ b/test/linalg/CMakeLists.txt
@@ -2,6 +2,7 @@ set(
   fppFiles
   "test_linalg.fypp"
   "test_blas_lapack.fypp"
+  "test_linalg_determinant.fypp"
   "test_linalg_matrix_property_checks.fypp"
 )
 fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
@@ -9,3 +10,4 @@ fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
 ADDTEST(linalg)
 ADDTEST(linalg_matrix_property_checks)
 ADDTEST(blas_lapack)
+ADDTEST(linalg_determinant)
