--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -38,7 +38,7 @@ jobs:
           mingw-w64-${{ matrix.arch }}-python-setuptools
           mingw-w64-${{ matrix.arch }}-cmake
           mingw-w64-${{ matrix.arch }}-ninja
-          mingw-w64-${{ matrix.arch }}-minizip-ng
+          mingw-w64-x86_64-minizip-ng
 
     - name: Setup msys POSIX environment
       uses: msys2/setup-msys2@v2
@@ -54,7 +54,7 @@ jobs:
           python-pip
           cmake
           ninja
-          minizip-ng
+          mingw-w64-x86_64-minizip-ng
 
     - name: Install fypp
       run: pip install fypp
