add `solve_lu` test

--- a/example/linalg/CMakeLists.txt
+++ b/example/linalg/CMakeLists.txt
@@ -20,5 +20,6 @@ ADD_EXAMPLE(blas_gemv)
 ADD_EXAMPLE(lapack_getrf)
 ADD_EXAMPLE(solve1)
 ADD_EXAMPLE(solve2)
+ADD_EXAMPLE(solve3)
 ADD_EXAMPLE(determinant)
 ADD_EXAMPLE(determinant2)
