add test programs

--- a/test/linalg/CMakeLists.txt
+++ b/test/linalg/CMakeLists.txt
@@ -4,6 +4,7 @@ set(
   "test_blas_lapack.fypp"
   "test_linalg_lstsq.fypp"
   "test_linalg_determinant.fypp"
+  "test_linalg_svd.fypp"
   "test_linalg_matrix_property_checks.fypp"
 )
 fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
@@ -12,4 +13,5 @@ ADDTEST(linalg)
 ADDTEST(linalg_determinant)
 ADDTEST(linalg_matrix_property_checks)
 ADDTEST(linalg_lstsq)
+ADDTEST(linalg_svd)
 ADDTEST(blas_lapack)
