add `svdvals` example

--- a/example/linalg/CMakeLists.txt
+++ b/example/linalg/CMakeLists.txt
@@ -21,5 +21,6 @@ ADD_EXAMPLE(lapack_getrf)
 ADD_EXAMPLE(lstsq1)
 ADD_EXAMPLE(lstsq2)
 ADD_EXAMPLE(svd1)
+ADD_EXAMPLE(svd2)
 ADD_EXAMPLE(determinant)
 ADD_EXAMPLE(determinant2)
