--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,7 @@ endmacro(ADDTEST)
 add_subdirectory(array)
 add_subdirectory(ascii)
 add_subdirectory(bitsets)
+add_subdirectory(constants)
 add_subdirectory(hash_functions)
 add_subdirectory(hash_functions_perf)
 add_subdirectory(hashmaps)
