add `qr` module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ set(fppFiles
     stdlib_linalg_cross_product.fypp
     stdlib_linalg_solve.fypp
     stdlib_linalg_determinant.fypp
+    stdlib_linalg_qr.fypp
     stdlib_linalg_state.fypp
     stdlib_optval.fypp
     stdlib_selection.fypp
