--- a/example/linalg/CMakeLists.txt
+++ b/example/linalg/CMakeLists.txt
@@ -25,3 +25,5 @@ ADD_EXAMPLE(solve2)
 ADD_EXAMPLE(solve3)
 ADD_EXAMPLE(determinant)
 ADD_EXAMPLE(determinant2)
+ADD_EXAMPLE(qr)
+ADD_EXAMPLE(qr_space)
