Revert "add gcc-14, back 13,  remove ubuntu+gcc-13"
This reverts commit 47c20415be982d0e5db9d0f0b86363e1477d2241.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,11 +20,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-12]
-        gcc_v: [10, 11, 12, 13, 14] # Version of GFortran we want to use.
+        gcc_v: [10, 11, 12] # Version of GFortran we want to use.
         build: [cmake]
-        exclude:
-          - os: ubuntu-latest
-            gcc_v: 13 
         include:
           - os: ubuntu-latest
             gcc_v: 10
