--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,11 +19,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-12]
-        gcc_v: [10, 11, 12] # Version of GFortran we want to use.
+        os: [ubuntu-24.04, macos-12]
+        gcc_v: [10, 11, 12, 13] # Version of GFortran we want to use.
         build: [cmake]
+        exclude: 
+          - os: macos-12
+            gcc_v: 13
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-24.04
             gcc_v: 10
             build: cmake-inline
     env:
