ci: disable gcc-13 on macos-12

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,6 +36,8 @@ jobs:
         exclude:
           - os: macos-12
             toolchain: {compiler: intel, version: '2024.1'}
+          - os: macos-12
+            toolchain: {compiler: gcc, version: 13}
     env:
       BUILD_DIR: ${{ matrix.build == 'cmake' && 'build' || '.' }}
 
