--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -51,7 +51,7 @@ jobs:
         python-version: 3.x
 
     - name: Install fypp
-      run: pip install --upgrade fypp
+      run: pip install --upgrade fypp ninja
 
     - name: Setup Fortran compiler
       uses: fortran-lang/setup-fortran@v1.6.1
@@ -63,7 +63,7 @@ jobs:
     - name: Configure with CMake
       if: ${{ contains(matrix.build, 'cmake') }}
       run: >-
-        cmake -Wdev
+        cmake -Wdev -G Ninja
         -DCMAKE_BUILD_TYPE=Release
         -DCMAKE_MAXIMUM_RANK:String=4
         -DCMAKE_INSTALL_PREFIX=$PWD/_dist
