--- a/example/linalg/CMakeLists.txt
+++ b/example/linalg/CMakeLists.txt
@@ -15,6 +15,7 @@ ADD_EXAMPLE(is_triangular)
 ADD_EXAMPLE(inverse1)
 ADD_EXAMPLE(inverse2)
 ADD_EXAMPLE(inverse3)
+ADD_EXAMPLE(inverse4)
 ADD_EXAMPLE(outer_product)
 ADD_EXAMPLE(trace)
 ADD_EXAMPLE(state1)
