--- a/example/linalg/CMakeLists.txt
+++ b/example/linalg/CMakeLists.txt
@@ -12,10 +12,10 @@ ADD_EXAMPLE(is_skew_symmetric)
 ADD_EXAMPLE(is_square)
 ADD_EXAMPLE(is_symmetric)
 ADD_EXAMPLE(is_triangular)
-ADD_EXAMPLE(inverse1)
-ADD_EXAMPLE(inverse2)
-ADD_EXAMPLE(inverse3)
-ADD_EXAMPLE(inverse4)
+ADD_EXAMPLE(inverse_operator)
+ADD_EXAMPLE(inverse_function)
+ADD_EXAMPLE(inverse_inplace)
+ADD_EXAMPLE(inverse_subroutine)
 ADD_EXAMPLE(outer_product)
 ADD_EXAMPLE(trace)
 ADD_EXAMPLE(state1)
