--- a/test/linalg/CMakeLists.txt
+++ b/test/linalg/CMakeLists.txt
@@ -2,6 +2,7 @@ set(
   fppFiles
   "test_linalg.fypp"
   "test_blas_lapack.fypp"
+  "test_linalg_cholesky.fypp"
   "test_linalg_solve.fypp"
   "test_linalg_lstsq.fypp"
   "test_linalg_determinant.fypp"
@@ -11,6 +12,7 @@ set(
 fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
 
 ADDTEST(linalg)
+ADDTEST(linalg_cholesky)
 ADDTEST(linalg_determinant)
 ADDTEST(linalg_matrix_property_checks)
 ADDTEST(linalg_solve)
