--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -120,6 +120,14 @@ set(SRC
 
 add_library(${PROJECT_NAME} ${SRC})
 
+# Link to BLAS and LAPACK
+if(BLAS_FOUND)
+  target_link_libraries(${PROJECT_NAME} BLAS::BLAS)
+endif()
+if(LAPACK_FOUND)
+  target_link_libraries(${PROJECT_NAME} LAPACK::LAPACK)
+endif()
+
 set_target_properties(
   ${PROJECT_NAME}
   PROPERTIES
