--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,6 +38,7 @@ set(fppFiles
     stdlib_sorting.fypp
     stdlib_sorting_ord_sort.fypp
     stdlib_sorting_sort.fypp
+    stdlib_sorting_sort_adj.fypp
     stdlib_sorting_sort_index.fypp
     stdlib_specialfunctions_gamma.fypp
     stdlib_stats.fypp
