Add support mkl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,11 +46,23 @@ option(FIND_BLAS "Find external BLAS and LAPACK" ON)
 
 # --- find BLAS and LAPACK
 if(FIND_BLAS)
-  find_package(BLAS)
+  if(NOT BLAS_FOUND)
+    #Required for MKL
+    if(DEFINED ENV{MKLROOT} OR "${BLA_VENDOR}" MATCHES "^Intel")
+      enable_language("C")
+    endif()
+    find_package("BLAS")
+  endif()
   if(BLAS_FOUND)
     add_compile_definitions(STDLIB_EXTERNAL_BLAS)
   endif()
-  find_package(LAPACK)
+  if(NOT LAPACK_FOUND)
+    #Required for MKL
+    if(DEFINED ENV{MKLROOT} OR "${BLA_VENDOR}" MATCHES "^Intel")
+      enable_language("C")
+    endif()
+    find_package("LAPACK")
+  endif()
   if(LAPACK_FOUND)
     add_compile_definitions(STDLIB_EXTERNAL_LAPACK)
   endif()
