--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -122,10 +122,10 @@ add_library(${PROJECT_NAME} ${SRC})
 
 # Link to BLAS and LAPACK
 if(BLAS_FOUND)
-  target_link_libraries(${PROJECT_NAME} BLAS::BLAS)
+  target_link_libraries(${PROJECT_NAME} "BLAS::BLAS")
 endif()
 if(LAPACK_FOUND)
-  target_link_libraries(${PROJECT_NAME} LAPACK::LAPACK)
+  target_link_libraries(${PROJECT_NAME} "LAPACK::LAPACK")
 endif()
 
 set_target_properties(
