--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -121,21 +121,6 @@ jobs:
           mingw-w64-${{ matrix.arch }}-ninja
           mingw-w64-${{ matrix.arch }}-openblas
 
-    - name: Setup msys POSIX environment
-      uses: msys2/setup-msys2@v2
-      if: contains(matrix.msystem, 'MSYS')
-      with:
-        msystem: MSYS
-        update: false
-        install: >-
-          git
-          mingw-w64-x86_64-gcc
-          mingw-w64-x86_64-gcc-fortran
-          python
-          python-pip
-          cmake
-          ninja
-
     - name: Install fypp
       run: pip install fypp
 
@@ -144,7 +129,7 @@ jobs:
       run: >-
         PATH=$PATH:/mingw64/bin/ cmake
         -Wdev
-        -B build_openblas
+        -B build
         -DCMAKE_BUILD_TYPE=Debug
         -DCMAKE_Fortran_FLAGS_DEBUG="-Wall -Wextra -Wimplicit-interface -fPIC -g -fcheck=all -fbacktrace"
         -DCMAKE_MAXIMUM_RANK:String=4
@@ -154,22 +139,22 @@ jobs:
         FC: gfortran
         CC: gcc
         CXX: g++
-    
+
     - name: CMake build with OpenBLAS
-      run: PATH=$PATH:/mingw64/bin/ cmake --build build_openblas --parallel
+      run: PATH=$PATH:/mingw64/bin/ cmake --build build --parallel
 
     - name: catch build fail
       if: failure()
-      run: PATH=$PATH:/mingw64/bin/ cmake --build build_openblas --verbose --parallel 1
+      run: PATH=$PATH:/mingw64/bin/ cmake --build build --verbose --parallel 1
 
     - name: CTest with OpenBLAS
-      run: PATH=$PATH:/mingw64/bin/ ctest --test-dir build_openblas --output-on-failure --parallel -V -LE quadruple_precision
-    
+      run: PATH=$PATH:/mingw64/bin/ ctest --test-dir build --output-on-failure --parallel -V -LE quadruple_precision
+
     - uses: actions/upload-artifact@v1
       if: failure()
       with:
         name: WindowsCMakeTestlog_openblas
-        path: build_openblas/Testing/Temporary/LastTest.log
+        path: build/Testing/Temporary/LastTest.log
 
     - name: Install project with OpenBLAS
-      run: PATH=$PATH:/mingw64/bin/ cmake --install build_openblas
+      run: PATH=$PATH:/mingw64/bin/ cmake --install build
