--- a/fpm.toml
+++ b/fpm.toml
@@ -9,6 +9,9 @@ copyright = "2019-2021 stdlib contributors"
 test-drive.git = "https://github.com/fortran-lang/test-drive"
 test-drive.tag = "v0.4.0"
 
+[build]
+link = ["minizip-ng"]
+
 [preprocess]
 [preprocess.cpp]
 suffixes = [".F90", ".f90"]
