Install fypp from msys2 package, clean up file

--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -24,9 +24,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup MinGW native environment
+      - name: Setup environment
         uses: msys2/setup-msys2@v2
-        if: contains(matrix.msystem, 'MINGW')
         with:
           msystem: ${{ matrix.msystem }}
           update: false
@@ -35,28 +34,9 @@ jobs:
             mingw-w64-${{ matrix.arch }}-gcc
             mingw-w64-${{ matrix.arch }}-gcc-fortran
             mingw-w64-${{ matrix.arch }}-python
-            mingw-w64-${{ matrix.arch }}-python-pip
-            mingw-w64-${{ matrix.arch }}-python-setuptools
+            mingw-w64-${{ matrix.arch }}-python-fypp
             mingw-w64-${{ matrix.arch }}-cmake
             mingw-w64-${{ matrix.arch }}-ninja
-
-      - name: Setup msys POSIX environment
-        uses: msys2/setup-msys2@v2
-        if: contains(matrix.msystem, 'MSYS')
-        with:
-          msystem: MSYS
-          update: false
-          install: >-
-            git
-            mingw-w64-x86_64-gcc
-            mingw-w64-x86_64-gcc-fortran
-            python
-            python-pip
-            cmake
-            ninja
-
-      - name: Install fypp
-        run: pip install fypp
 
       - run: >-
           PATH=$PATH:/mingw64/bin/ cmake
