--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -1,6 +1,6 @@
 name: CI_windows
 
-on: push
+on: [push, pull_request]
 
 env:
   CTEST_TIME_TIMEOUT: "5" # some failures hang forever
@@ -13,18 +13,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          [
-            { msystem: MSYS, arch: x86_64 },
-            { msystem: MINGW64, arch: x86_64 },
-            { msystem: MINGW32, arch: i686 },
-          ]
+          [{ msystem: MINGW64, arch: x86_64 }, { msystem: MINGW32, arch: i686 }]
     defaults:
       run:
         shell: msys2 {0}
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup environment
+      - name: Setup MinGW native environment
         uses: msys2/setup-msys2@v2
         with:
           msystem: ${{ matrix.msystem }}
