--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -33,6 +33,7 @@ jobs:
             mingw-w64-${{ matrix.arch }}-python-fypp
             mingw-w64-${{ matrix.arch }}-cmake
             mingw-w64-${{ matrix.arch }}-ninja
+            unzip
 
       - run: >-
           PATH=$PATH:/mingw64/bin/ cmake
