--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -57,6 +57,7 @@ jobs:
 
       - name: CTest
         run: PATH=$PATH:/mingw64/bin/ ctest --test-dir build --output-on-failure --parallel -V -LE quadruple_precision
+        shell: msys2 {0}
 
       - uses: actions/upload-artifact@v1
         if: failure()
