Extract methods to stdlib_filesystem.f90

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -104,6 +104,7 @@ set(SRC
     stdlib_ansi_to_string.f90
     stdlib_codata.f90
     stdlib_error.f90
+    stdlib_filesystem.f90
     stdlib_hashmap_wrappers.f90
     stdlib_hashmaps.f90
     stdlib_hashmap_chaining.f90
