Start adding tests for stdlib_filesystem

--- a/test/io/CMakeLists.txt
+++ b/test/io/CMakeLists.txt
@@ -13,8 +13,9 @@ ADDTEST(savetxt_qp)
 set_tests_properties(loadtxt_qp PROPERTIES LABELS quadruple_precision)
 set_tests_properties(savetxt_qp PROPERTIES LABELS quadruple_precision)
 
+ADDTEST(filesystem)
 ADDTEST(getline)
 ADDTEST(np)
-ADDTEST(zip)
 ADDTEST(open)
 ADDTEST(parse_mode)
+ADDTEST(zip)
