--- a/test/io/CMakeLists.txt
+++ b/test/io/CMakeLists.txt
@@ -5,6 +5,16 @@ set(
 )
 fypp_f90("${fyppFlags}" "${fppFiles}" outFiles)
 
+set(hasCPP
+    test_zip.f90
+)
+
+if(CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
+  set_source_files_properties(${hasCPP} PROPERTIES COMPILE_FLAGS "-cpp")
+elseif(CMAKE_Fortran_COMPILER_ID STREQUAL "Intel")
+  set_source_files_properties(${hasCPP} PROPERTIES COMPILE_FLAGS "-fpp")
+endif()
+
 ADDTEST(loadtxt)
 ADDTEST(savetxt)
 
