Add first test, configure cpp and fix some errors

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,4 +32,11 @@ add_subdirectory(math)
 add_subdirectory(stringlist)
 add_subdirectory(terminal)
 
-target_compile_definitions(test_zip PRIVATE TEST_ROOT_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
+set(setRootDir
+    test_np
+    test_zip
+)
+
+foreach(target ${setRootDir})
+    target_compile_definitions(${target} PRIVATE TEST_ROOT_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
+endforeach()
